@@ -17,11 +17,6 @@ requests on graphics and other content move to the forum
 
 ======== Code ==========================================================
 
-(-) [UI] scrolling credits (finish)
-    (-) must show title
-    (I always make widget Credits a bit higher when a new contributor appears;
-    soon it won't be possible :) )
-
 (-) Move EXIT in all levels
 
 (-) Pulling
