@@ -154,7 +154,9 @@ module FreeVikings
           end
 
           # Submenu: Credits
-          Credits.new(menu, load_credits)
+          cred_data = load_credits
+          p cred_data
+          ScrollingCredits.new(menu, cred_data)
           
           QuitButton.new(menu, QuitButton::QUIT)
         end
@@ -265,6 +267,7 @@ module FreeVikings
       c = []
 
       File.open('CREDITS', 'r').each_line do |line|
+        puts "+++#{line}"
         name, credits = line.split(':')
         credits.strip!
         c << [name, credits]
